--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -379,16 +379,22 @@ body {
 }
 
 .card {
-  width: 32%;
-  height: 600px;
+  width: calc(32% - 2px);
+  height: 590px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.card:hover{
+ 
+  background-color: rgba(15, 14, 14, 0.699);
+  color: aliceblue;
+  transition: 1s;
+}
 
 .card img {
-  width: 80%;
+  width: 90%;
   aspect-ratio: 1/1;
   margin-top: 24px;
   background-color: rgb(207, 206, 205);
