--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,7 +96,7 @@ body {
   width: 80%;
   animation: hero-img;
   animation-duration: 3s;
-  height: 600px
+  height: 600px;
 }
 
 .hero-txt p {
@@ -171,7 +171,8 @@ body {
   text-transform: uppercase;
 }
 
-.detail-txt :first-child {}
+.detail-txt :first-child {
+}
 
 .detail-txt .row1 {
   display: flex;
@@ -386,8 +387,7 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.card:hover{
- 
+.card:hover {
   background-color: rgba(15, 14, 14, 0.699);
   color: aliceblue;
   transition: 1s;
@@ -428,4 +428,112 @@ body {
   font-size: 22px;
   font-weight: normal;
   margin-top: 24px;
+}
+
+.footer {
+  width: 100%;
+  height: 700px;
+  background-color: rgb(229, 231, 233);
+}
+.footer div {
+  width: 75%;
+  margin-left: 12.5%;
+  padding-top: 120px;
+  margin-bottom: 120px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer div .left {
+  width: 60%;
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+.footer div .left p {
+  font-size: 40px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  text-transform: capitalize;
+  margin: 0;
+  margin-bottom: 60px;
+}
+.footer div .left input[type="email"] {
+  width: calc(48% - 20px);
+  background-color: rgb(226, 221, 215);
+  border: 0;
+  font-size: 18px;
+
+  padding: 20px;
+}
+.footer div .left input[type="submit"] {
+  width: calc(30% - 20px);
+  background-color: #4b5320;
+  border: 0;
+  padding: 20px;
+  font-size: 18px;
+  color: white;
+}
+.footer div .left input[type="submit"]:hover {
+  background-color: black;
+  transition: 1.5s;
+}
+
+.footer div .left input[type="email"]:focus {
+  outline: none;
+}
+.footer div .right {
+  width: 30%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+.footer div .right .contact-info {
+  display: block;
+  padding: 0;
+  margin: 0;
+  width: 40%;
+}
+.footer div .right .contact-info :first-child {
+  font-size: 30px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  text-transform: capitalize;
+  margin: 0;
+  margin-bottom: 60px;
+  margin-top: 10px;
+  cursor: auto;
+}
+.footer div .right .contact-info p {
+  font-size: 18px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  cursor: pointer;
+  margin: 0;
+  margin-bottom: 60px;
+}
+
+.footer div .right .about-us {
+  padding: 0;
+  margin: 0;
+  display: block;
+  width: 40%;
+}
+.footer div .right .about-us :first-child {
+  font-size: 30px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  text-transform: capitalize;
+  margin: 0;
+  margin-bottom: 60px;
+  margin-top: 10px;
+  cursor: auto;
+}
+.footer div .right .about-us p {
+  font-size: 18px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  cursor: pointer;
+  margin: 0;
+  margin-bottom: 60px;
 }
