--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: #4b5320;
+  background-color: #0f0f0e;
 }
 
 .nav p {
